libneubot.py

#
# LibNeubot interface - Public domain.
# WARNING: Autogenerated file - do not edit!
#

# pylint: disable = C0111, C0103

import _ctypes
import ctypes
import logging
import os
import sys

if sys.platform == "darwin":
    LIBNEUBOT_NAME = "/usr/local/lib/libneubot.dylib.3"
else:
    LIBNEUBOT_NAME = "/usr/local/lib/libneubot.so.3"

LIBNEUBOT = ctypes.CDLL(LIBNEUBOT_NAME)

DIE = getattr(os, '_exit')

NEUBOT_SLOT_VO = ctypes.CFUNCTYPE(None, ctypes.py_object)

NEUBOT_HOOK_VO = ctypes.CFUNCTYPE(None, ctypes.py_object)
NEUBOT_HOOK_VOS = ctypes.CFUNCTYPE(None, ctypes.py_object,
  ctypes.c_char_p)

#
# NeubotConnection API:
#

LIBNEUBOT.NeubotConnection_attach.restype = ctypes.c_void_p
LIBNEUBOT.NeubotConnection_attach.argtypes = (
    ctypes.c_void_p,
    ctypes.c_longlong,
)

def NeubotConnection_attach(proto, filenum):
    ret = LIBNEUBOT.NeubotConnection_attach(proto, filenum)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_connect.restype = ctypes.c_void_p
LIBNEUBOT.NeubotConnection_connect.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_char_p,
    ctypes.c_char_p,
)

def NeubotConnection_connect(proto, family, address, port):
    ret = LIBNEUBOT.NeubotConnection_connect(proto, family, address, 
      port)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_get_protocol.restype = ctypes.c_void_p
LIBNEUBOT.NeubotConnection_get_protocol.argtypes = (
    ctypes.c_void_p,
)

def NeubotConnection_get_protocol(handle):
    ret = LIBNEUBOT.NeubotConnection_get_protocol(handle)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_set_timeout.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_set_timeout.argtypes = (
    ctypes.c_void_p,
    ctypes.c_double,
)

def NeubotConnection_set_timeout(handle, timeo):
    ret = LIBNEUBOT.NeubotConnection_set_timeout(handle, timeo)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_clear_timeout.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_clear_timeout.argtypes = (
    ctypes.c_void_p,
)

def NeubotConnection_clear_timeout(handle):
    ret = LIBNEUBOT.NeubotConnection_clear_timeout(handle)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_start_tls.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_start_tls.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint,
)

def NeubotConnection_start_tls(handle, server_side):
    ret = LIBNEUBOT.NeubotConnection_start_tls(handle, server_side)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_read.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_read.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_size_t,
)

def NeubotConnection_read(handle, base, count):
    ret = LIBNEUBOT.NeubotConnection_read(handle, base, count)
    return ret

LIBNEUBOT.NeubotConnection_readline.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_readline.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_size_t,
)

def NeubotConnection_readline(handle, base, count):
    ret = LIBNEUBOT.NeubotConnection_readline(handle, base, count)
    return ret

LIBNEUBOT.NeubotConnection_readn.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_readn.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_size_t,
)

def NeubotConnection_readn(handle, base, count):
    ret = LIBNEUBOT.NeubotConnection_readn(handle, base, count)
    return ret

LIBNEUBOT.NeubotConnection_discardn.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_discardn.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)

def NeubotConnection_discardn(handle, count):
    ret = LIBNEUBOT.NeubotConnection_discardn(handle, count)
    return ret

LIBNEUBOT.NeubotConnection_write.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_write.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_size_t,
)

def NeubotConnection_write(handle, base, count):
    ret = LIBNEUBOT.NeubotConnection_write(handle, base, count)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_puts.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_puts.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
)

def NeubotConnection_puts(handle, base):
    ret = LIBNEUBOT.NeubotConnection_puts(handle, base)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_read_into_.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_read_into_.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
)

def NeubotConnection_read_into_(handle, evdest):
    ret = LIBNEUBOT.NeubotConnection_read_into_(handle, evdest)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_write_from_.restype = ctypes.c_int
LIBNEUBOT.NeubotConnection_write_from_.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
)

def NeubotConnection_write_from_(handle, evsource):
    ret = LIBNEUBOT.NeubotConnection_write_from_(handle, evsource)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotConnection_close.argtypes = (
    ctypes.c_void_p,
)

def NeubotConnection_close(handle):
    LIBNEUBOT.NeubotConnection_close(handle)

#
# NeubotEchoServer API:
#

LIBNEUBOT.NeubotEchoServer_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotEchoServer_construct.argtypes = (
    PollerBase,
    ctypes.c_int,
    ctypes.c_char_p,
    ctypes.c_char_p,
)



LIBNEUBOT.NeubotPollable_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotPollable_construct.argtypes = (
    PollerBase,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    ctypes.py_object,
)

def NeubotPollable_handle_read_slot_vo(selfptr):
    try:
        selfptr.handle_read()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_READ_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_read_slot_vo
)

def NeubotPollable_handle_write_slot_vo(selfptr):
    try:
        selfptr.handle_write()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_WRITE_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_write_slot_vo
)

def NeubotPollable_handle_error_slot_vo(selfptr):
    try:
        selfptr.handle_error()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_ERROR_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_error_slot_vo
)



LIBNEUBOT.NeubotPollable_attach.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_attach.argtypes = (
    PollableBase,
    ctypes.c_longlong,
)



LIBNEUBOT.NeubotPollable_detach.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_get_fileno.restype = ctypes.c_longlong
LIBNEUBOT.NeubotPollable_get_fileno.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_set_readable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_set_readable.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_unset_readable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_unset_readable.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_set_writable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_set_writable.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_unset_writable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_unset_writable.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_set_timeout.argtypes = (
    PollableBase,
    ctypes.c_double,
)



LIBNEUBOT.NeubotPollable_clear_timeout.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPollable_close.argtypes = (
    PollableBase,
)



LIBNEUBOT.NeubotPoller_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotPoller_construct.argtypes = (
)



LIBNEUBOT.NeubotPoller_sched.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_sched.argtypes = (
    PollerBase,
    ctypes.c_double,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
)

def NeubotPoller_sched_callback_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["callback"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_SCHED_CALLBACK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_sched_callback_hook_vo
)



LIBNEUBOT.NeubotPoller_defer_read.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_defer_read.argtypes = (
    PollerBase,
    ctypes.c_longlong,
    NEUBOT_HOOK_VO,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
    ctypes.c_double,
)

def NeubotPoller_defer_read_handle_ok_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_ok"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_READ_HANDLE_OK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_read_handle_ok_hook_vo
)

def NeubotPoller_defer_read_handle_timeout_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_timeout"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_READ_HANDLE_TIMEOUT_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_read_handle_timeout_hook_vo
)



LIBNEUBOT.NeubotPoller_defer_write.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_defer_write.argtypes = (
    PollerBase,
    ctypes.c_longlong,
    NEUBOT_HOOK_VO,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
    ctypes.c_double,
)

def NeubotPoller_defer_write_handle_ok_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_ok"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_WRITE_HANDLE_OK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_write_handle_ok_hook_vo
)

def NeubotPoller_defer_write_handle_timeout_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_timeout"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_WRITE_HANDLE_TIMEOUT_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_write_handle_timeout_hook_vo
)



LIBNEUBOT.NeubotPoller_resolve.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_resolve.argtypes = (
    PollerBase,
    ctypes.c_char_p,
    ctypes.c_char_p,
    NEUBOT_HOOK_VOS,
    ctypes.py_object,
)

def NeubotPoller_resolve_callback_hook_vos(closure, string):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["callback"](closure.opaque, string)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_RESOLVE_CALLBACK_HOOK_VOS = NEUBOT_HOOK_VOS(
    NeubotPoller_resolve_callback_hook_vos
)



LIBNEUBOT.NeubotPoller_loop.argtypes = (
    PollerBase,
)



LIBNEUBOT.NeubotPoller_break_loop.argtypes = (
    PollerBase,
)



#
# NeubotProtocol API:
#

LIBNEUBOT.NeubotProtocol_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotProtocol_construct.argtypes = (
    ctypes.c_void_p,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    ctypes.py_object,
)
